# goit-pythonweb-hw-12

./: .coverage  .gitignore  Dockerfile  docker-compose.yaml  main.py  package-lock.json  pyproject.toml  pytest.ini
config/: config.py
database/: db.py  models.py
docs/source/: conf.py  database.models.rst  database.rst  modules.rst  repository.contacts.rst  repository.users.rst  routes.auth.rst  routes.contacts.rst  routes.rst  schemas.contact.rst  schemas.rst  schemas.user.rst  services.auth.rst  services.cloudinary.rst  services.limiter.rst
repository/: contacts.py  users.py
routes/: auth.py  contacts.py  users.py
schemas/: contact.py  user.py
services/: auth.py  cache.py  cloudinary.py  email.py  limiter.py
services/templates/: email_template.html  password_reset.html
tests/: conftest.py  test_repo_users.py  test_route_auth.py  test_route_contacts.py  test_unit_auth_service.py
